--- a/work.html
+++ b/work.html
@@ -8,9 +8,16 @@ title: work
 		<article class="history">
       <blockquote>
 
+        <b class="red"><i class="icon-attention"> </i> This page is <i>STILL</i> out of date! (2019)</b> I have since early 2016 been working with <a href="https://tradeshift.com/" target="_blank">Tradeshift</a> helping to create innovation in e-invoicing, supply chain finance, e-logistics, e-commerce and even blockchain technologies.
+        In my spare time I create <a href="/games"> games & game tools <i class="icon-gamepad"></i></a> and contribute to opensource projects on <a href="https://github.com/jamessimo" target="_blank">GitHub <i class="icon-github"></i></a>
+
+      </blockquote>
+
+      <blockquote>
+
         <b class="red"><i class="icon-attention"> </i> This page is out of date!</b> Since 2014 till early 2016 I have been working for large banks and commodities brokers. The sensitive nature of this work means that I cannot disclose what I did publicly due to a number of non-discloser agreements (NDA) I have signed.
      What I can disclose is that I rapidly designed and prototyped web apps using AngularJS as proof of concepts that communicated to a proprietary backend system.
-        As of April 2016 I am working at Tradeshift as a senior UI/UX designer and you can always checkout my <a href="https://github.com/jamessimo" target="_blank">GitHub <i class="icon-github"></i></a>
+        As of April 2016 I am working at Tradeshift as a senior UX/UI designer and you can always checkout my <a href="https://github.com/jamessimo" target="_blank">GitHub <i class="icon-github"></i></a>
 
       </blockquote>
 			<div>
@@ -25,7 +32,7 @@ title: work
 				<h2>kindynow.com</h2>
 				<ul>
 					<li>HTML5 + CSS3</li>
-					<li>Responsive</li>
+					<li>Responsive layouts</li>
 					<li>SEO</li>
 				</ul>
 			</div>
@@ -40,7 +47,7 @@ title: work
 			<div>
 				<h2>subtropic.co.uk</h2>
 				<ul>
-					<li>Fullstack Developer</li>
+					<li>Fullstack developer</li>
 					<li>SEO</li>
 					<li>Design + UX</li>
 				</ul>
@@ -48,16 +55,16 @@ title: work
 			<div>
 				<h2>fanstang.com</h2>
 				<ul>
-					<li>Backend Analytics developer</li>
+					<li>Backend analytics developer</li>
 					<li>Mobile website lead developer</li>
 					<li>PHP module programming</li>
 				</ul>
 			</div>
 			<div>
-				<h2>transitionchina.com</h2>
+				<h2>nesthomeschina.com</h2>
 				<ul>
-					<li>Fullstack Developer</li>
-					<li>SEO</li>
+					<li>Fullstack developer</li>
+					<li>Data architecture</li>
 					<li>UX</li>
 				</ul>
 			</div>
