Added Shinetech banner + more links

--- a/index.html
+++ b/index.html
@@ -7,7 +7,42 @@ title: home
 		<p class="browsehappy">HEY! Thanks for visiting my site, unfortunately you seem to be using an <strong>outdated</strong> browser.<br/>Please <a href="http://browsehappy.com/">upgrade your browser</a> to view my site they way it was meant to be viewed.</p>
 		<![endif]-->
 
-		<!--<p class="shoutbox"><i class="icon-megaphone">Announcement:</i> GOOD NEWS! <a href="http://jamessimo.github.io/Commuter-Fling/">Commuter Fling!</a> has just been <strong>launched</strong> on the <a title="Download now!">Apple app store</a> for iPad! <a id="close-shout" href="#"><i class="icon-cancel"></i><i class="icon-megaphone"></i></a></p>-->
+		<div class="shoutbox shinetech">
+		  <div style="text-align:center">
+		    <div class="mediumLogo">
+		      <a href="https://shinetechsoftware.com" target="_blank">
+		        <svg class="ShinetechSVG" width="40" height="40" viewBox="0 0 40 40">
+
+							<g id="ShinetechIco" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+					        <g id="Logo-Small" fill-rule="nonzero">
+					            <g id="CircleLogo">
+					                <g id="g20" transform="translate(19.500000, 20.299998) scale(-1, 1) rotate(-180.000000) translate(-19.500000, -20.299998) translate(0.000000, 0.799998)" fill="#E62024">
+					                    <path d="M19.4999988,0 C8.79499948,0 0.0864999948,8.70899948 0.0864999948,19.4139988 C0.0864999948,20.9274988 0.261499984,22.4359987 0.606999964,23.8969986 C0.922499945,25.2314985 2.26199987,26.0574984 3.59499979,25.7419985 C4.92999971,25.4264985 5.75599966,24.0884986 5.43999968,22.7539986 C5.18299969,21.6664987 5.0524997,20.5429988 5.0524997,19.4139988 C5.0524997,11.4479993 11.5334993,4.9664997 19.4999988,4.9664997 C27.4664984,4.9664997 33.947998,11.4479993 33.947998,19.4139988 C33.947998,27.3804984 27.4664984,33.861998 19.4999988,33.861998 C18.1284989,33.861998 17.016999,34.9734979 17.016999,36.3449978 C17.016999,37.7164978 18.1284989,38.8279977 19.4999988,38.8279977 C30.2049982,38.8279977 38.9144977,30.1189982 38.9144977,19.4139988 C38.9144977,8.70899948 30.2049982,0 19.4999988,0" id="path22"></path>
+					                </g>
+					                <g id="g24" transform="translate(21.805649, 23.361298) scale(-1, 1) rotate(-180.000000) translate(-21.805649, -23.361298) translate(13.305649, 14.861298)" fill="#E62024">
+					                    <path d="M16.499999,8.49999949 C16.499999,4.01499976 12.8644992,0.377999977 8.3789995,0.377999977 C3.89349977,0.377999977 0.256999985,4.01499976 0.256999985,8.49999949 C0.256999985,12.9854992 3.89349977,16.621499 8.3789995,16.621499 C12.8644992,16.621499 16.499999,12.9854992 16.499999,8.49999949" id="path26"></path>
+					                </g>
+					                <g id="g28" transform="translate(13.577649, 3.328100) scale(-1, 1) rotate(-180.000000) translate(-13.577649, -3.328100) translate(11.077649, 0.828100)" fill="#231F20">
+					                    <path d="M4.9999997,2.49999985 C4.9999997,1.12799993 3.88749977,0.0154999991 2.51549985,0.0154999991 C1.14349993,0.0154999991 0.0309999982,1.12799993 0.0309999982,2.49999985 C0.0309999982,3.87199977 1.14349993,4.9844997 2.51549985,4.9844997 C3.88749977,4.9844997 4.9999997,3.87199977 4.9999997,2.49999985" id="path30"></path>
+					                </g>
+					                <g id="g32" transform="translate(8.608650, 6.130849) scale(-1, 1) rotate(-180.000000) translate(-8.608650, -6.130849) translate(6.108650, 3.630849)" fill="#231F20">
+					                    <path d="M4.9999997,2.49999985 C4.9999997,1.12799993 3.88799977,0.015999999 2.51549985,0.015999999 C1.14399993,0.015999999 0.0314999981,1.12799993 0.0314999981,2.49999985 C0.0314999981,3.87199977 1.14399993,4.9844997 2.51549985,4.9844997 C3.88799977,4.9844997 4.9999997,3.87199977 4.9999997,2.49999985" id="path34"></path>
+					                </g>
+					                <g id="g36" transform="translate(4.847400, 10.462349) scale(-1, 1) rotate(-180.000000) translate(-4.847400, -10.462349) translate(2.347400, 7.962349)" fill="#231F20">
+					                    <path d="M4.9999997,2.49999985 C4.9999997,1.12849993 3.88749977,0.0154999991 2.51549985,0.0154999991 C1.14349993,0.0154999991 0.0309999982,1.12849993 0.0309999982,2.49999985 C0.0309999982,3.87199977 1.14349993,4.9844997 2.51549985,4.9844997 C3.88749977,4.9844997 4.9999997,3.87199977 4.9999997,2.49999985" id="path38"></path>
+					                </g>
+					            </g>
+					        </g>
+					    </g>
+
+					</svg>
+		      </a>
+		    </div>
+		    <div class="announceText">
+		      <span>Want to work with me? Together with <a href="https://shinetechsoftware.com" target="_blank">Shinetech Software</a> we can create great, feature-rich software</span>
+		    </div>
+		  </div>
+		</div>
 
 	 	<h1>Hi! I'm James.</h1>
         <h2>This is what I do</h2>
@@ -58,8 +93,8 @@ title: home
   	<section class="about">
   		<article>
 	        <h2>About</h2>
-	        <p>I am currently working as the <b>UX Director</b> for Shinetech Software in Suzhou, China</p>
-	        <p>I help lead innovation and create rich user experiences for a wide varaity of platforms with an amazing global team</p>
-	        <p>When I am not working on innovative projects, I am developing <a title="Check out my games!" href="/games">web &amp; mobile games</a>, cooking, <a title="My thoughts I demand you read" href="/blog">blogging</a> and being a loving husband &amp; father<i class="icon-heart"></i></p>
+	        <p>I am currently working as the <b>UX Director</b> for <a href="https://shinetechsoftware.com/" target="_blank" title="TRUSTED WORLDWIDE SOFTWARE DEVELOPMENT SERVICES PROVIDER"> Shinetech Software </a>in Suzhou, China</p>
+	        <p>I help lead innovation and create rich user experiences for a wide varaity of clients with an amazing global team</p>
+	        <p>When I am not working on innovative projects with clients, I am developing <a title="Check out my games!" href="/games">web &amp; mobile games</a>, cooking, <a title="My thoughts I demand you read" href="/blog">blogging</a> and being a loving husband &amp; father<i class="icon-heart"></i></p>
         </article>
     </section>
